@@ -1,4 +1,4 @@
-DEFINED_PHASES=compile configure install prepare test
+DEFINED_PHASES=compile configure install postinst prepare test
 DEPEND=>=dev-db/sqlite-3.4:3 dev-libs/qtkeychain dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtsql:4 dev-qt/qttest:4 dev-qt/qtwebkit:4 net-libs/neon[ssl] sys-fs/inotify-tools virtual/libiconv samba? ( >=net-fs/samba-3.5 ) sftp? ( >=net-libs/libssh-0.5 ) !net-misc/ocsync doc? ( dev-python/sphinx dev-texlive/texlive-latexextra virtual/latex-base ) test? ( dev-util/cmocka ) sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
 DESCRIPTION=Synchronize files from ownCloud Server with your computer
 EAPI=5
@@ -8,6 +8,6 @@ KEYWORDS=~amd64 ~x86
 LICENSE=CC-BY-3.0 GPL-2
 RDEPEND=>=dev-db/sqlite-3.4:3 dev-libs/qtkeychain dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtsql:4 dev-qt/qttest:4 dev-qt/qtwebkit:4 net-libs/neon[ssl] sys-fs/inotify-tools virtual/libiconv samba? ( >=net-fs/samba-3.5 ) sftp? ( >=net-libs/libssh-0.5 ) !net-misc/ocsync
 SLOT=0
-SRC_URI=http://download.owncloud.com/desktop/stable/mirall-1.5.3.tar.bz2
+SRC_URI=http://download.owncloud.com/desktop/stable/mirall-1.6.0.tar.bz2
 _eclasses_=cmake-utils	412d9e2d2c6f85f46dad595e68570d21	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=b9e64378f78f3bc69fbb5635f71440a0
+_md5_=6de1a44559ee8e8a8e1b004f3437c62a
