@@ -2,16 +2,16 @@
 Hash: SHA256
 
 AUX owncloud-client-1.5.3-man-page-location-fix.patch 733 SHA256 df564b7b95d1496ab5ecfd26a6d94089e00a83bd67f1d2f47e07e0cf85d913fe SHA512 ca04920a63006df1d5ec784ab1d2e51b7c3d57463f0a543fbd81e32213d012b564ba09211ae20aba5ba5ae25d46f7ac0e2979764c263e66de14311bdc5b7c4c0 WHIRLPOOL 32ed5321f148d16083d0a9676930ed05892525f33fbb305100e6a30aca9076aa2cd9391808890890dfffe54e88849d374555e175942cae245e08afa0ce1023eb
-DIST mirall-1.5.3.tar.bz2 7841424 SHA256 a50f235eba7a24915e583c3c5bb68ccd86171296151a9520f5a375842b3ced8e SHA512 2b7b9f2e65dce283295130b8ff801b846b4580749c4628c9f2f33d9747d0a48b240e187dd6e22947a011788defbff21322ef2b58b5d9e828d8ef8c79f55707f6 WHIRLPOOL 358636814f93632f9ad71385aca96941a374130a9565dd1c389ec3fc2f72f21e1022a4dd1daf76f44bfac92e0dbf9bc880722ed41f045c8e0670acaccedacb65
 DIST mirall-1.5.4.tar.bz2 7841154 SHA256 6a227f6c2d68d70f1f79c133e15f033a567a93ae55da83e303f57d2301bd5ad6 SHA512 7f95118f2018ee91d4e14deaa8192c99d9148c641abd45cdb6aba107b7cf779548a54ca1ea2e7d1db124a68fc8deeff95a517f9e508aaecd8f84cfa8c0b9f802 WHIRLPOOL 058bfeedb07d9d9fb162777ff75fe64ab8b764f3cbd5702b09e78312e7d8d78c2c9ac5e41994d0a2aefa9b9f54caefdeda81e7ae8ed139be4006f9421d43ac2e
-EBUILD owncloud-client-1.5.3-r1.ebuild 1551 SHA256 95b46a1ec87b1515419eb137862929a193d782c20ed0860f772ff9cdfc2794b6 SHA512 45254c38ddf6e71085001997b4114365b27c82f91583c72fe7743f007c3e460d918630efbf222f35b899008d6a416d2714d92dadfb1fa49659022d4e4e08a506 WHIRLPOOL ce255aec376ce64245f592df846a6c12df6a5a0eb563fc0b9872210e7139d9f93d897ed0b1e6fb486f1325d6c11d26efdf5238313c93b8879512d931e820a531
+DIST mirall-1.6.0.tar.bz2 7868930 SHA256 12b5da4b5598db3ef5d4d26e464de3534f3a6b8a864719949d82c77cfc353ab5 SHA512 7026cc1de582af3a7c0b22de8685f4e8e0bb94479fb0929e3f85ecd8c6e6dfccfc4c49ab0d03ad3b234412071bed02d6abf40383cc45b91d776c741a5c075fca WHIRLPOOL 528c623eeeb96c85551e4233f513078227289e3da5ce821a6dcbd7d35ec0c2c799b3573a6b39afd7b2818af058c08f6ab1a168010d64f72d9bb5fd62e0756632
 EBUILD owncloud-client-1.5.4.ebuild 1555 SHA256 045d2447b042a7851b40cdd3e93f2eb0a22c8714a1e14c95d1095760f9be973a SHA512 33c19a47e2203c9c395cece1d0acdccf5590cfa6ea56ca4c8d4610d681c93a4a17ebba2113c31d32bcd6377e36b9911e11329b830bf341f355963888dfc805c2 WHIRLPOOL 2c2d5628244d439dbcf6dbe4b3c8851c3895122f4669165b82af62a53c7735f1d0e33e9b14d14e0e8ae574fe34dfb5bffc73779e99302395689c9b2f3a48f58c
-MISC ChangeLog 6737 SHA256 3eb2f66104935dde12011d7d3eda5b40572f4dd3643c9580b43bcf2134e24eab SHA512 662870105a27a1b91165435bbfccfd6a29d47a91539d64e3ba40674414b6624e4324c730eec59974d47ae8807e6d4670e3b0af53b677fdadfb0ad1b50c9ab266 WHIRLPOOL cb1ac932d1ec8bb24893b7e9568ff8661f7b0e4d13f67d227f724530119c59eb3f850fd5f5ed60a2419fffb97a4b7686d0b9eaafd4e0c00e1fe1bf044f088aab
+EBUILD owncloud-client-1.6.0.ebuild 1697 SHA256 a49731f25a3e5bbb4148f668d0e09d6a5b916adf5c5b5c6d51f69c62401e9a1e SHA512 8d6cdab3acbca777eecabc7f08c611bff965db29abdddb787bea700ef20e170174efe7e3e581ec60244a08e338dbd065a3927fc94b64d49e704d1ea70b726c6a WHIRLPOOL 2679217d4aabae173d8f46a44636ca77135cba8ffe05fbd88823209b4ded99bd46f3bf2ccb33ebda5469fa851762b4b265027c2bac3d890d7a0ff7f6301db92e
+MISC ChangeLog 7004 SHA256 2c5de9718b993dc865cdbff7a2334da0eff4273752c785a4bcf95013e6a4f417 SHA512 559556af6edafb2f2e534112d97377a149435bedbacd9d54b10464e591040217187f8348a55358a1b5253ab51eaf8e0386f064add8e3515ea05df45b190511ea WHIRLPOOL 3b23e142d16cfd95dc6600fc9aab68f64beb9d800363f3e062ae4f7975bb8191509e07ec92c27d700390067bd3dd3f44144f8f4714aa824881234530f5a1108d
 MISC metadata.xml 340 SHA256 c5c40a72df05ec9d8dfc3ecb271645226480e30f635847dfa0192fdf868104b8 SHA512 ca9a12a90e3d0a254a64c64529bd66bc427afb8161685b2dedcc433aec208a5c6b68bd501cdfddf137171ff90d57e8a416815f562ec5fee9bf466e389815dd08 WHIRLPOOL baab644f7192bb71a79fc60d12766c196169863686da3c9a3fd388d079798bb7e8bb55fb956899b27f431ac741fbfecdf11bf17b3aa9184b555cb1fafc639db7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iF4EAREIAAYFAlNWW30ACgkQFYEBGcdFJfJjBQEAlsRvPJEAbS1BUtR4J91zVA6W
-bYt02HB5P3ArdKRauXgA/AteMCmGHB7vpeaISRTCWYXEQj1HSphgJWhiFS21y4Nh
-=W0Vl
+iF4EAREIAAYFAlOTcMUACgkQFYEBGcdFJfKHcwEAopz7WSVTyvb3TBvXVE3WoDxg
+zdZN01ReSF0zW1fKR1IA/R4zlOa15vSyZHzu5xXLfEFoS5Fx6YzkeRW2ObsIymZF
+=2Q1H
 -----END PGP SIGNATURE-----
