@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/owncloud-client
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/owncloud-client/ChangeLog,v 1.9 2014/04/22 12:07:19 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/owncloud-client/ChangeLog,v 1.10 2014/06/07 20:06:23 voyageur Exp $
+
+*owncloud-client-1.6.0 (07 Jun 2014)
+
+  07 Jun 2014; Bernard Cafarelli <voyageur@gentoo.org>
+  -owncloud-client-1.5.3-r1.ebuild, +owncloud-client-1.6.0.ebuild:
+  Version bump, fixes bug #512322. Also adds a postinstallation message with
+  USE=-doc, bug #bug 509716
 
 *owncloud-client-1.5.4 (22 Apr 2014)
 
